--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
+streamlit==1.36.0
+tensorflow-cpu==2.15.0
 numpy==1.26.4
-tensorflow==2.15.0
-streamlit==1.34.0
-Pillow==10.2.0
-matplotlib==3.9.0
+pillow==10.2.0
