--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.36.0
-tensorflow-cpu==2.15.0
-numpy==1.26.4
-pillow==10.2.0
+tensorflow-cpu==2.10.0
+streamlit==1.26.0
+numpy
+pandas
+Pillow
+scikit-learn
+matplotlib
