--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-tensorflow-cpu==2.10.0
-streamlit==1.26.0
+tensorflow==2.12.0
+streamlit==1.35.0
 numpy
-pandas
-Pillow
-scikit-learn
-matplotlib
+pillow
